kubernetes/kafka-bootstrap-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-bootstrap
  namespace: kafka
spec:
  type: ClusterIP
  selector:
    app: kafka
  ports:
    - name: sasl
      port: 9092
      targetPort: 9092
